--- a/package.json
+++ b/package.json
@@ -9,5 +9,7 @@
   "keywords": [],
   "author": "Scott Spence <spences10apps@gmail.com> (https://blog.scottspence.me/)",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "unique-random-array": "1.0.0"
+  }
 }
